Fix: UserController fix findall return method